# spflow

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml  pyrightconfig.json
artifacts/: START_HERE.md
artifacts/beamforming/: README.md
doc/: ComplexPRHalfbandStage_A0試作結果.md  ComplexPRHalfbandStage_A1試作結果.md  ComplexPRHalfbandStage_sinc系予備試験.md  ComplexPRHalfbandStage_正式仕様.md  ComplexPRHalfbandStage_試作品1結果.md  Nonuniform_FilterBank_Daubechies_streaming_sweep結果.md  Nonuniform_FilterBank_InnerProductBinReduction.md  Nonuniform_FilterBank_streaming検証結果.md  Nonuniform_FilterBank_正式処理詳細図.md  Nonuniform_FilterBank_正式構造設計書.md  PRDFT_FilterBank_実用設計方針.md  基本設計書.md
doc/EBAE/: EBAE詳細設計書.md
doc/SLC/: Codex比較検討依頼_8月評価向け軽量ABF_like方式.md  方式整理.md  軽量ABF_like非信号方位抑圧方式検討設計書.md
doc/SpFlow/: 32bit運用データ型移行設計.md  LevelConverter設計.md  SpFlow_基本設計書.md  beamforming責務分割設計.md  examples部品化設計.md  scene_renderer_DAS結合試験設計.md  共分散積分3方式比較設計.md  (+6 more)
evaluations/: __init__.py
examples/: __init__.py  basic_pipeline.py
tests/: conftest.py  test_api_documentation.py  test_double_buffer_callback.py  test_example_placement.py  test_flow.py  test_frame_buffer.py  test_option.py  test_step_scheduler.py
tools/: build_api_docs.py  calibrate_steering_power_thresholds.py  design_complex_halfband_stage.py  design_fractional_delay_filter_bank.py  design_operational_shading_file.py  design_operational_shading_for_beam_count.py  design_operational_sparse_array_file.py  design_prdft_prototype.py  design_time_delay_guard_table.py  optimize_complex_halfband_stage_sinc.py  package_alignment_evaluation_release.py  render_alignment_design_word.py  render_formal_s2a_t2a_word.py
(+415 files in other folders)
