[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "spflow"
version = "0.1.0"
description = "Lightweight utilities for sequential signal processing in Python."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "februa" },
]
dependencies = [
  "numpy>=1.23",
]

[project.optional-dependencies]
dev = [
  "latex2mathml>=3.78",
  "matplotlib>=3.7",
  "pyright>=1.1.380",
  "pytest>=8.0",
  "ruff>=0.6.0",
]
docs = [
  "pdoc>=16,<17",
]
beamforming-eval = [
  "matplotlib>=3.7",
]
vendor = [
  "scene-renderer @ git+https://github.com/februa/scene_renderer.git",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"


[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
